fixed missed align attr

--- a/main/style.css
+++ b/main/style.css
@@ -364,8 +364,7 @@ img {
 
     nav a {
         display: inline-block;
-        padding: 1
-        em;
+        padding: 1em;
         text-decoration: none;
         color: whitesmoke;
     }
